Add: code for creating interactions

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In the following sections we will explore the dataset to fetch basic statistics about the dataset like the number of subreddits, users, how many comments were made etc. This will help us in determing the direction of further exploration of the comments and suitable subsampling of the comments, with which we will build the final recommender. \n",
     "\n",
-    "Also a baseline we are considering each comment by a user on a subreddit as an implicit feedback that the user interacts with this subreddit. "
+    "Also as a baseline we are considering each comment by a user on a subreddit as an implicit feedback that the user interacts with this subreddit. "
    ]
   },
   {
@@ -32,7 +32,7 @@
    "source": [
     "# sample json from the reddit data to get the keys\n",
     "sample_json = \"\"\"{\"score_hidden\":false,\"name\":\"t1_cnas8zv\",\"link_id\":\"t3_2qyr1a\",\"body\":\"Most of us have some family members like this. *Most* of my family is like this. \",\"downs\":0,\"created_utc\":\"1420070400\",\"score\":14,\"author\":\"YoungModern\",\"distinguished\":null,\"id\":\"cnas8zv\",\"archived\":false,\"parent_id\":\"t3_2qyr1a\",\"subreddit\":\"exmormon\",\"author_flair_css_class\":null,\"author_flair_text\":null,\"gilded\":0,\"retrieved_on\":1425124282,\"ups\":14,\"controversiality\":0,\"subreddit_id\":\"t5_2r0gj\",\"edited\":false}\"\"\"\n",
-    "json_keys = [key for key, value in json.loads(sample).items()]"
+    "json_keys = [key for key, value in json.loads(sample_json).items()]"
    ]
   },
   {
@@ -164,9 +164,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "94a53bab0d45416cb028cedad79515a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "subreddit_user_interaction = defaultdict(lambda: defaultdict(lambda: 0))\n",
     "\n",
@@ -175,194 +197,84 @@
     "        comment = json.loads(line)\n",
     "        subreddit = comment['subreddit']\n",
     "        author = comment['author']\n",
-    "        subreddits[] += 1\n",
-    "        authors[comment['author']] += 1\n",
+    "        if len(comment['body']) > 30:\n",
+    "            subreddit_user_interaction[subreddit][author] += 1\n",
     "        del comment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = defaultdict(lambda: defaultdict(lambda: 0))"
+    "with open('interactions', 'a') as f:\n",
+    "    for subreddit in subreddit_user_interaction.keys():\n",
+    "        for author in subreddit_user_interaction[subreddit].keys():\n",
+    "            line = ' '.join(list(map(str, [subreddit, author, subreddit_user_interaction[subreddit][author], '\\n'])))\n",
+    "            f.write(line)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(<function __main__.<lambda>()>, {})"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(<function __main__.<lambda>.<locals>.<lambda>()>, {})"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y['a']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y['a']['b'] += 1"
+    "sorted([(k, v) for k, v in authors.items()], key=lambda x: -x[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f273ff0c6714f88978d191d5d028335",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "defaultdict(<function __main__.<lambda>()>,\n",
-       "            {'a': defaultdict(<function __main__.<lambda>.<locals>.<lambda>()>,\n",
-       "                         {'b': 1})})"
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
       ]
      },
-     "execution_count": 75,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
-    "y"
+    "quality_subreddit_user_interaction = defaultdict(lambda: defaultdict(lambda: 0))\n",
+    "\n",
+    "with open('data/RC_2015-01') as infile:\n",
+    "    for line in tqdm_notebook(infile):\n",
+    "        comment = json.loads(line)\n",
+    "        subreddit = comment['subreddit']\n",
+    "        author = comment['author']\n",
+    "        if len(comment['body']) > 30:\n",
+    "            quality_subreddit_user_interaction[subreddit][author] += 1\n",
+    "        del comment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y['a']['c'] += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function defaultdict.values>"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a': defaultdict(<function __main__.<lambda>.<locals>.<lambda>()>,\n",
-       "             {'b': 1, 'c': 1})}"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dict(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(<function __main__.<lambda>()>,\n",
-       "            {'a': defaultdict(<function __main__.<lambda>.<locals>.<lambda>()>,\n",
-       "                         {'b': 1, 'c': 1})})"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y['z']['c'] += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(<function __main__.<lambda>()>,\n",
-       "            {'a': defaultdict(<function __main__.<lambda>.<locals>.<lambda>()>,\n",
-       "                         {'b': 1, 'c': 1}),\n",
-       "             'z': defaultdict(<function __main__.<lambda>.<locals>.<lambda>()>,\n",
-       "                         {'c': 1})})"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
+    "with open('interactions_30_ch', 'a') as f:\n",
+    "    for subreddit in quality_subreddit_user_interaction.keys():\n",
+    "        for author in quality_subreddit_user_interaction[subreddit].keys():\n",
+    "            line = ' '.join(list(map(str, [subreddit, author, quality_subreddit_user_interaction[subreddit][author], '\\n'])))\n",
+    "            f.write(line)"
    ]
   },
   {
