--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -217,15 +217,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sorted([(k, v) for k, v in authors.items()], key=lambda x: -x[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 119,
    "metadata": {},
    "outputs": [
@@ -282,7 +273,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user_comments_30 = defaultdict(int)\n",
+    "for subreddit in quality_subreddit_user_interaction.keys():\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
