Add: user comments with at least 30 ch

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -197,8 +197,7 @@
     "        comment = json.loads(line)\n",
     "        subreddit = comment['subreddit']\n",
     "        author = comment['author']\n",
-    "        if len(comment['body']) > 30:\n",
-    "            subreddit_user_interaction[subreddit][author] += 1\n",
+    "        subreddit_user_interaction[subreddit][author] += 1\n",
     "        del comment"
    ]
   },
@@ -270,15 +269,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
     "user_comments_30 = defaultdict(int)\n",
+    "\n",
     "for subreddit in quality_subreddit_user_interaction.keys():\n",
-    "    \n",
-    "    "
+    "    for user in quality_subreddit_user_interaction[subreddit].keys():\n",
+    "        user_comments_30[user] += quality_subreddit_user_interaction[subreddit][user]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_comments_30_sorted = sorted([(k, v) for k, v in user_comments_30.items()], key=lambda x: -x[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
