Add: basic t-sne plot for subreddits

--- a/models.ipynb
+++ b/models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,13 @@
     "from scipy.sparse import coo_matrix\n",
     "from scipy.sparse.linalg import svds\n",
     "from implicit.nearest_neighbours import bm25_weight\n",
-    "from implicit import alternating_least_squares"
+    "from implicit import alternating_least_squares\n",
+    "import umap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +90,7 @@
      "text": [
       "This method is deprecated. Please use the AlternatingLeastSquares class instead\n",
       "WARNING:root:OpenBLAS detected. Its highly recommend to set the environment variable 'export OPENBLAS_NUM_THREADS=1' to disable its internal multithreading\n",
-      "100%|██████████| 15.0/15 [00:54<00:00,  3.48s/it]\n"
+      "100%|██████████| 15.0/15 [01:04<00:00,  3.69s/it]\n"
      ]
     }
    ],
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,32 +129,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('deathnote', 1.0),\n",
-       " ('Naruto', 0.9703468),\n",
-       " ('CodeGeass', 0.9637688),\n",
-       " ('OnePiece', 0.96334124),\n",
-       " ('magickaito1412', 0.95928794),\n",
-       " ('MSRP', 0.95661414),\n",
-       " ('Jibba', 0.9543929),\n",
-       " ('chuunibyou', 0.95296353),\n",
-       " ('ShokugekiNoSoma', 0.9515109),\n",
-       " ('YoshisIsland', 0.95139694)]"
+       "[('OnePiece', 0.9999999),\n",
+       " ('Naruto', 0.98521143),\n",
+       " ('OnePunchMan', 0.97248393),\n",
+       " ('bleach', 0.9659112),\n",
+       " ('evangelion', 0.9641021),\n",
+       " ('snowleopards', 0.96162313),\n",
+       " ('FullmetalAlchemist', 0.9615463),\n",
+       " ('KillLaKill', 0.9608073),\n",
+       " ('churchofpokemon', 0.959475),\n",
+       " ('gantz', 0.95921016)]"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_related.get_related('deathnote')"
+    "top_related.get_related('OnePiece')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(41143, 20)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subreddit_factors.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/abkds/anaconda3/lib/python3.6/site-packages/umap/spectral.py:229: UserWarning: Embedding a total of 2 separate connected components using meta-embedding (experimental)\n",
+      "  n_components\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(41143, 2)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subreddits_embedded = umap.UMAP().fit_transform(subreddit_factors)\n",
+    "subreddits_embedded.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3.712512  , -0.54299134],\n",
+       "       [10.828133  , -4.028959  ],\n",
+       "       [ 7.516719  , -4.2612247 ],\n",
+       "       ...,\n",
+       "       [12.795794  , -2.954731  ],\n",
+       "       [ 2.836984  ,  6.1448727 ],\n",
+       "       [ 8.1486    , -4.846176  ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subreddits_embedded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subreddits = data['subreddit'].cat.categories.array.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "indices = random.sample(range(len(subreddits)), 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampled_subreddits = subreddits[indices]\n",
+    "sampled_subreddits_embedded = subreddits_embedded[indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "High five! You successfully sent some data to your account on plotly. View your plot in your browser at https://plot.ly/~abkds/0 or inside your plot.ly account where it is named 'basic-scatter'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~abkds/0.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly\n",
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "plotly.tools.set_credentials_file(username='abkds', api_key='KKuXHMUKu7EHg9kIZWrl')\n",
+    "\n",
+    "\n",
+    "# Create random data with numpy\n",
+    "import numpy as np\n",
+    "\n",
+    "N = 500\n",
+    "xs = sampled_subreddits_embedded[:, 0]\n",
+    "ys = sampled_subreddits_embedded[:, 1]\n",
+    "\n",
+    "# Create a trace\n",
+    "trace = go.Scatter(\n",
+    "    x = xs,\n",
+    "    y = ys,\n",
+    "    mode='markers+text',\n",
+    "    text=sampled_subreddits\n",
+    ")\n",
+    "\n",
+    "data_ = [trace]\n",
+    "\n",
+    "# Plot and embed in ipython notebook!\n",
+    "py.iplot(data_, filename='basic-scatter')\n",
+    "\n",
+    "# or plot with: plot_url = py.plot(data, filename='basic-line')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
