Add: BPR baseline model

--- a/models.ipynb
+++ b/models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,25 +151,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('OnePiece', 0.9999999),\n",
-       " ('Naruto', 0.98521143),\n",
-       " ('OnePunchMan', 0.97248393),\n",
-       " ('bleach', 0.9659112),\n",
-       " ('evangelion', 0.9641021),\n",
-       " ('snowleopards', 0.96162313),\n",
-       " ('FullmetalAlchemist', 0.9615463),\n",
-       " ('KillLaKill', 0.9608073),\n",
-       " ('churchofpokemon', 0.959475),\n",
-       " ('gantz', 0.95921016)]"
+       "[('OnePiece', 0.99999994),\n",
+       " ('Naruto', 0.99061096),\n",
+       " ('bleach', 0.98533773),\n",
+       " ('OnePunchMan', 0.98216236),\n",
+       " ('gamingadvice', 0.9787289),\n",
+       " ('KillLaKill', 0.9785078),\n",
+       " ('animebazaar', 0.97804713),\n",
+       " ('StardustCrusaders', 0.9744566),\n",
+       " ('snowleopards', 0.97381645),\n",
+       " ('RolledTheDice', 0.97334623)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "(41143, 20)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,24 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/abkds/anaconda3/lib/python3.6/site-packages/umap/spectral.py:229: UserWarning: Embedding a total of 2 separate connected components using meta-embedding (experimental)\n",
-      "  n_components\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "(41143, 2)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,22 +221,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 3.712512  , -0.54299134],\n",
-       "       [10.828133  , -4.028959  ],\n",
-       "       [ 7.516719  , -4.2612247 ],\n",
+       "array([[ 3.6010728,  0.0774124],\n",
+       "       [-3.897131 , -4.700751 ],\n",
+       "       [-1.2897592, -2.1058679],\n",
        "       ...,\n",
-       "       [12.795794  , -2.954731  ],\n",
-       "       [ 2.836984  ,  6.1448727 ],\n",
-       "       [ 8.1486    , -4.846176  ]], dtype=float32)"
+       "       [-3.5628572, -6.5976143],\n",
+       "       [ 9.227859 ,  1.489325 ],\n",
+       "       [-1.9831607, -2.7639296]], dtype=float32)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +296,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,11 +333,318 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bayesian Personalized Ranking"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from implicit.bpr import BayesianPersonalizedRanking\n",
+    "\n",
+    "params = {\"factors\": 63}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(27148, 1113188), 86.0\n",
+      "(27148, 824475), 30.0\n",
+      "(27148, 747152), 9.0\n",
+      "(27148, 726613), 1.0\n",
+      "(27148, 2314515), 84.0\n",
+      "(27148, 1640350), 52.0\n",
+      "(27148, 1206063), 17.0\n",
+      "(27148, 1491311), 71.0\n",
+      "(27148, 1003607), 165.0\n",
+      "(27148, 2089596), 15.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cx = comments\n",
+    "\n",
+    "k = 0\n",
+    "for i, j, v in zip(comments.row, cx.col, cx.data):\n",
+    "    if k == 10:\n",
+    "        break\n",
+    "    print( \"(%d, %d), %s\" % (i,j,v) )\n",
+    "    k += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "import tqdm\n",
+    "import time\n",
+    "import codecs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = BayesianPersonalizedRanking(**params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = 'bpr'\n",
+    "output_filename = 'subreddits_recs_bpr'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [03:37<00:00,  2.21s/it, correct=95.94%, skipped=7.16%]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bpr_related_subreddits(subreddit):\n",
+    "    found = np.where(subreddits == subreddit)\n",
+    "    if len(found[0]) == 0:\n",
+    "        raise ValueError(\"Subreddit doesn't exist in the dataset.\")\n",
+    "    _id = found[0][0]\n",
+    "    return [(subreddits[i], v) for i, v in model.similar_items(_id)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('dogs', 2.9264455),\n",
+       " ('Dogtraining', 2.752574),\n",
+       " ('puppy101', 2.6112063),\n",
+       " ('Pets', 2.550935),\n",
+       " ('AskVet', 2.4905205),\n",
+       " ('WiggleButts', 2.447608),\n",
+       " ('DoggyDNA', 2.421627),\n",
+       " ('rescuedogs', 2.4086597),\n",
+       " ('mutt', 2.3754249),\n",
+       " ('Veterinary', 2.3596926)]"
+      ]
+     },
+     "execution_count": 349,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bpr_related_subreddits('dogs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users = data['user'].cat.categories.array.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 412,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4e72e844826f429f99bac62bc6089bf3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=2323019), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# generate recommendations for each user and write out to a file\n",
+    "user_comments = comments.T.tocsr()\n",
+    "\n",
+    "with tqdm.tqdm_notebook(total=len(users)) as progress:\n",
+    "    with codecs.open(output_filename, \"w\", \"utf8\") as o:\n",
+    "        for userid, username in enumerate(users):\n",
+    "            for subredditid, score in model.recommend(userid, user_comments):\n",
+    "                o.write(\"%s\\t%s\\t%s\\n\" % (username, subreddits[subredditid], score))\n",
+    "            progress.update(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sample user recommendations\n",
+    "\n",
+    "We went through the user 'xkcd_transciber' list of subreddits, where he/she commented. Taking a view of the kind of subreddits followed by the user we see that the predictions are good. This is just one sample, we are saving the recommendations for all users in a file and will also write the AUC score function for getting the exact scores for the generated recommendations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 413,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend_for_user(username):\n",
+    "    sample_user_id = np.where(users == username)[0][0]\n",
+    "    return [(subreddits[i], v) for i, v in model.recommend(2293528, user_comments)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Buttcoin', 3.698471),\n",
+       " ('redditrequest', 3.686717),\n",
+       " ('spam', 3.6279433),\n",
+       " ('programmingcirclejerk', 3.593357),\n",
+       " ('modclub', 3.5591707),\n",
+       " ('roguelikedev', 3.4863684),\n",
+       " ('metanarchism', 3.4842796),\n",
+       " ('LinuxCirclejerk', 3.4640236),\n",
+       " ('ModelUSGov', 3.45617),\n",
+       " ('lisp', 3.3709202)]"
+      ]
+     },
+     "execution_count": 414,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommend_for_user('xkcd_transcriber')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 415,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def subreddits_interacted_by_user(username):\n",
+    "    sample_user_id = np.where(users == username)[0][0]\n",
+    "    _idlist =  comments.getcol(sample_user_id)\n",
+    "    return [subreddits[idx] for idx, i in enumerate(xkcd.toarray()) if i != 0.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 416,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['linuxquestions',\n",
+       " 'cpp',\n",
+       " 'NBASpurs',\n",
+       " 'computertechs',\n",
+       " 'Serendipity',\n",
+       " 'Libertarian',\n",
+       " 'TheFacebookDelusion',\n",
+       " 'Kappa',\n",
+       " 'battlestations',\n",
+       " 'linux_gaming',\n",
+       " 'creepy',\n",
+       " 'Banshee',\n",
+       " 'harrypotter',\n",
+       " 'iphone',\n",
+       " 'collapse',\n",
+       " 'gatech',\n",
+       " 'Cricket',\n",
+       " 'calvinandhobbes',\n",
+       " 'PS4',\n",
+       " 'MLS',\n",
+       " 'Gunners',\n",
+       " 'lolphp',\n",
+       " 'changetip',\n",
+       " 'Python',\n",
+       " 'latterdaysaints',\n",
+       " 'scientology',\n",
+       " 'startrek',\n",
+       " 'electronics',\n",
+       " 'learnpython',\n",
+       " 'ukpolitics',\n",
+       " 'acecombat',\n",
+       " 'lgbt',\n",
+       " 'ShitAmericansSay',\n",
+       " 'SacredGeometry',\n",
+       " 'philadelphia',\n",
+       " 'JamesBond',\n",
+       " 'speedrun',\n",
+       " 'CodAW',\n",
+       " 'Austin',\n",
+       " 'sweden',\n",
+       " 'techsupportanimals',\n",
+       " 'sysadmin',\n",
+       " 'shittyaskreddit',\n",
+       " 'RWBY',\n",
+       " 'CFBOffTopic',\n",
+       " 'minecraftsuggestions',\n",
+       " 'phillycycling',\n",
+       " 'AndroidMasterRace',\n",
+       " 'socialskills',\n",
+       " 'MilitaryPorn']"
+      ]
+     },
+     "execution_count": 416,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sample 50 reddits with which xkcd_transcriber has interacted with.\n",
+    "random.sample(subreddits_interacted_by_user('xkcd_transcriber'), 50)"
+   ]
   },
   {
    "cell_type": "code",
